--- a/kellerkompanie-sync/MainWindow.xaml
+++ b/kellerkompanie-sync/MainWindow.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:p="clr-namespace:kellerkompanie_sync.Properties"
-    Title="kellerkompanie-sync (0.1.0-alpha)"
+    Title="kellerkompanie-sync (0.2.0-beta)"
     Width="800"
     Height="600"
     MinWidth="800"
