--- a/kellerkompanie-sync/ChooseDirectoryWindow.xaml
+++ b/kellerkompanie-sync/ChooseDirectoryWindow.xaml
@@ -3,14 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:kellerkompanie_sync"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="ChooseDirectoryWindow"
+    xmlns:p="clr-namespace:kellerkompanie_sync.Properties"
+    Title="{x:Static p:Resources.ChooseDirectoryDialogTitle}"
     SizeToContent="WidthAndHeight"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <StackPanel Margin="16">
-        <TextBlock Margin="0,0,0,8" Text="To which addon search directory do you want to download?" />
+        <TextBlock Margin="0,0,0,8" Text="{x:Static p:Resources.ChooseDirectoryDialogMessage}" />
         <ComboBox Name="ComboBox" />
         <WrapPanel
             Grid.Row="2"
