simplified container classes, added null check to FilePath, added Uuid class, solved synchronization issues

--- a/kellerkompanie-sync/ModsPage.xaml
+++ b/kellerkompanie-sync/ModsPage.xaml
@@ -181,7 +181,7 @@
                             HorizontalAlignment="Stretch"
                             FontSize="18"
                             Foreground="#ee4d2e"
-                            Text="{Binding WebAddonGroup.Name}" />
+                            Text="{Binding Name}" />
                         <TextBlock
                             Name="TextBlockDownloading"
                             Margin="8,0,0,0"
