Added Errorhandling + Message for User, if the Addon Search Directory was not Found

--- a/kellerkompanie-sync/NewsPage.xaml
+++ b/kellerkompanie-sync/NewsPage.xaml
@@ -14,7 +14,7 @@
         Background="#161618"
         BorderThickness="0"
         ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-        ScrollViewer.VerticalScrollBarVisibility="Disabled">
+        ScrollViewer.VerticalScrollBarVisibility="Hidden">
         <ListView.ItemContainerStyle>
             <Style TargetType="ListViewItem">
                 <Setter Property="Padding" Value="0" />
